kube-prometheus/prometheus-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ing
  namespace: monitoring
spec:
  rules:
  - host: prometheus.slw
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: 9090
          
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ing
  namespace: monitoring
spec:
  rules:
  - host: grafana.slw
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
          
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-ing
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.slw
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: 9093
